[gd_scene load_steps=16 format=2]

[ext_resource path="res://Images/VisionItem.png" type="Texture" id=1]
[ext_resource path="res://Images/pixil-frame-0 (6).png" type="Texture" id=2]
[ext_resource path="res://Images/Inventario/InventarioTexts/12.QualitykpisText.png" type="Texture" id=3]
[ext_resource path="res://Images/Inventario/InventarioTexts/1..LeanText.png" type="Texture" id=4]
[ext_resource path="res://Images/Inventario/InventarioTexts/5.RoadmapText.png" type="Texture" id=5]
[ext_resource path="res://Images/Inventario/InventarioTexts/10.BusinesskpisText.png" type="Texture" id=6]
[ext_resource path="res://Images/Inventario/InventarioTexts/9.UserkpisText.png" type="Texture" id=7]
[ext_resource path="res://Images/Inventario/InventarioTexts/11.Deploymentkpistext.png" type="Texture" id=8]
[ext_resource path="res://Images/Inventario/InventarioTexts/8.DatadrivenText.png" type="Texture" id=9]
[ext_resource path="res://Images/Inventario/InventarioTexts/3.XpText.png" type="Texture" id=10]
[ext_resource path="res://Images/Inventario/InventarioTexts/2.HcdText.png" type="Texture" id=11]
[ext_resource path="res://Images/Inventario/InventarioTexts/7..BacklogText.png" type="Texture" id=12]
[ext_resource path="res://Images/Inventario/InventarioTexts/6.StakeholdersText.png" type="Texture" id=13]
[ext_resource path="res://Cenas/Inventario.gd" type="Script" id=14]

[sub_resource type="StreamTexture" id=1]
flags = 4
load_path = "res://.import/VisionText.png-fb3633b2016433ef185424de7262210c.stex"

[node name="Node2D" type="Node2D"]
script = ExtResource( 14 )

[node name="button1" type="TextureButton" parent="."]
margin_left = 171.0
margin_top = 15.0
margin_right = 371.0
margin_bottom = 115.0
texture_normal = ExtResource( 4 )
expand = true

[node name="item1" type="Sprite" parent="button1"]
position = Vector2( -98, 41 )
scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 1 )

[node name="text1" type="Sprite" parent="button1"]
position = Vector2( -1876, 2564 )
texture = SubResource( 1 )

[node name="button2" type="TextureButton" parent="."]
margin_left = 169.0
margin_top = 106.0
margin_right = 369.0
margin_bottom = 206.0
texture_normal = ExtResource( 11 )

[node name="item2" type="Sprite" parent="button2"]
position = Vector2( -98, 41 )
scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 1 )

[node name="text2" type="Sprite" parent="button2"]
position = Vector2( -1876, 2564 )
texture = SubResource( 1 )

[node name="button3" type="TextureButton" parent="."]
margin_left = 171.0
margin_top = 197.0
margin_right = 371.0
margin_bottom = 297.0
texture_normal = ExtResource( 10 )

[node name="item3" type="Sprite" parent="button3"]
position = Vector2( -98, 41 )
scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 1 )

[node name="text3" type="Sprite" parent="button3"]
position = Vector2( -1876, 2564 )
texture = SubResource( 1 )

[node name="button4" type="TextureButton" parent="."]
margin_left = 169.0
margin_top = 294.0
margin_right = 369.0
margin_bottom = 394.0
texture_normal = ExtResource( 2 )

[node name="item4" type="Sprite" parent="button4"]
position = Vector2( -98, 41 )
scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 1 )

[node name="text4" type="Sprite" parent="button4"]
position = Vector2( -1876, 2564 )
texture = SubResource( 1 )

[node name="button5" type="TextureButton" parent="."]
margin_left = 167.0
margin_top = 393.0
margin_right = 367.0
margin_bottom = 493.0
texture_normal = ExtResource( 5 )

[node name="item5" type="Sprite" parent="button5"]
position = Vector2( -98, 41 )
scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 1 )

[node name="text5" type="Sprite" parent="button5"]
position = Vector2( -1876, 2564 )
texture = SubResource( 1 )

[node name="button6" type="TextureButton" parent="."]
margin_left = 80.0
margin_top = 501.0
margin_right = 480.0
margin_bottom = 601.0
texture_normal = ExtResource( 13 )

[node name="item6" type="Sprite" parent="button6"]
position = Vector2( -34, 47 )
scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 1 )

[node name="text6" type="Sprite" parent="button6"]
position = Vector2( -1876, 2564 )
texture = SubResource( 1 )

[node name="button7" type="TextureButton" parent="."]
margin_left = 558.0
margin_top = 11.0
margin_right = 758.0
margin_bottom = 111.0
texture_normal = ExtResource( 12 )

[node name="item7" type="Sprite" parent="button7"]
position = Vector2( -98, 41 )
scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 1 )

[node name="text7" type="Sprite" parent="button7"]
position = Vector2( -1876, 2564 )
texture = SubResource( 1 )

[node name="button8" type="TextureButton" parent="."]
margin_left = 560.0
margin_top = 104.0
margin_right = 760.0
margin_bottom = 204.0
texture_normal = ExtResource( 9 )

[node name="item8" type="Sprite" parent="button8"]
position = Vector2( -98, 41 )
scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 1 )

[node name="text8" type="Sprite" parent="button8"]
position = Vector2( -1876, 2564 )
texture = SubResource( 1 )

[node name="button9" type="TextureButton" parent="."]
margin_left = 560.0
margin_top = 197.0
margin_right = 760.0
margin_bottom = 297.0
texture_normal = ExtResource( 7 )

[node name="item9" type="Sprite" parent="button9"]
position = Vector2( -98, 41 )
scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 1 )

[node name="text9" type="Sprite" parent="button9"]
position = Vector2( -1876, 2564 )
texture = SubResource( 1 )

[node name="button10" type="TextureButton" parent="."]
margin_left = 560.0
margin_top = 297.0
margin_right = 760.0
margin_bottom = 397.0
texture_normal = ExtResource( 6 )

[node name="item10" type="Sprite" parent="button10"]
position = Vector2( -98, 41 )
scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 1 )

[node name="text10" type="Sprite" parent="button10"]
position = Vector2( -1876, 2564 )
texture = SubResource( 1 )

[node name="button11" type="TextureButton" parent="."]
margin_left = 540.0
margin_top = 392.0
margin_right = 1020.0
margin_bottom = 492.0
texture_normal = ExtResource( 8 )

[node name="item11" type="Sprite" parent="button11"]
position = Vector2( -42, 43 )
scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 1 )

[node name="text11" type="Sprite" parent="button11"]
position = Vector2( -1876, 2564 )
texture = SubResource( 1 )

[node name="button12" type="TextureButton" parent="."]
margin_left = 545.0
margin_top = 502.0
margin_right = 1025.0
margin_bottom = 602.0
texture_normal = ExtResource( 3 )

[node name="item12" type="Sprite" parent="button12"]
position = Vector2( -33, 45 )
scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 1 )

[node name="button12" type="Sprite" parent="button12"]
position = Vector2( -1876, 2564 )
texture = SubResource( 1 )

[connection signal="pressed" from="button1" to="." method="_on_button1_pressed"]
